{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 105,
  "lineage": "adf416df-147c-2544-c6a2-bb6c3d048daf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-08T00:44:18.861-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/benefex-382821/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/benefex-382821/global/networks/technical-blog",
            "priority": 1000,
            "project": "benefex-382821",
            "self_link": "https://www.googleapis.com/compute/v1/projects/benefex-382821/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.technical_blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-08T00:44:18.892-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/benefex-382821/global/firewalls/allow-rdp",
            "log_config": [],
            "name": "allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/benefex-382821/global/networks/technical-blog",
            "priority": 1000,
            "project": "benefex-382821",
            "self_link": "https://www.googleapis.com/compute/v1/projects/benefex-382821/global/firewalls/allow-rdp",
            "source_ranges": [
              "80.193.23.74/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.technical_blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "technical_blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/benefex-382821/global/networks/technical-blog",
            "mtu": 0,
            "name": "technical-blog",
            "project": "benefex-382821",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/benefex-382821/global/networks/technical-blog"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "technical_blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/benefex-382821/regions/europe-west2/instanceGroups/technical-blog",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-04-08T01:22:38.269-07:00",
            "enable_cdn": false,
            "fingerprint": "2FMUJXbhUzI=",
            "health_checks": [
              "projects/benefex-382821/regions/europe-west2/healthChecks/technical-blog"
            ],
            "id": "projects/benefex-382821/regions/europe-west2/backendServices/technical-blog",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "technical-blog",
            "port_name": "http",
            "project": "benefex-382821",
            "protocol": "HTTPS",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/benefex-382821/regions/europe-west2/backendServices/technical-blog",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_region_health_check.technical_blog",
            "google_compute_region_instance_group_manager.technical_blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "technical_blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-08T01:22:59.847-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/benefex-382821/regions/europe-west2/backendServices/technical-blog",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "t2HqUd-bBtw=",
            "host_rule": [],
            "id": "projects/benefex-382821/regions/europe-west2/urlMaps/technical-blog",
            "map_id": 3466106020514536076,
            "name": "technical-blog",
            "path_matcher": [],
            "project": "benefex-382821",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/benefex-382821/regions/europe-west2/urlMaps/technical-blog",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_region_backend_service.technical_blog",
            "google_compute_region_health_check.technical_blog",
            "google_compute_region_instance_group_manager.technical_blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-08T00:44:19.651-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/benefex-382821/regions/europe-west2/subnetworks/technical-blog-proxy",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "technical-blog-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/benefex-382821/global/networks/technical-blog",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "benefex-382821",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "europe-west2",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/benefex-382821/regions/europe-west2/subnetworks/technical-blog-proxy"
          },
          "dependencies": [
            "google_compute_network.technical_blog"
          ]
        }
      ]
    }
  ]
}